--- a/html/index.html
+++ b/html/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <div id="app">
-      <div class="board" id="player"></div>
-      <div class="board" id="dealer"></div>
+      <div class="board" id="player">
+        <p class="name">Player</p>
+      </div>
+      <div class="board" id="dealer">
+        <p class="name">Dealer</p>
+      </div>
     </div>
     <script src="../js/app.js"></script>
   </body>
