ajout d'un bouton rejouer

--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <title>Roll</title>
   </head>
   <body>
+    <button type="button" id="play">Rejouer</button>
     <div id="app">
       <div class="board" id="player">
         <p class="name">Player</p>
